Bug 433154 - Notification bar close button is too big, description isn't vertically centered. r=ventnor

--- a/toolkit/themes/gnomestripe/global/global.css
+++ b/toolkit/themes/gnomestripe/global/global.css
@@ -300,6 +300,11 @@ label[disabled="true"] {
   color: purple;
 }
 
+notification > button {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 /* :::::: autoscroll popup ::::: */
 
 #autoscroller {
